# STaD_prac2

./: CMakeLists.txt  test1.cpp  test2.cpp  test4.cpp
ps2/: README.md
ps2/tests/: benchmark.cpp  test1.cpp  test4.cpp  ublas_benchmark.cpp
ps4/: test.i
ps4/libtp4/examples/: test1.py  test2.c  test2.py  tk.py
ps4/libtp4/lib/: CMakeLists.txt  tp4.c  tp4.h  tp4.i  tp4.py  tp4_wrap.c
tests/: benchmark.cpp  test2.cpp  test3.cpp
