add_library(tp4 SHARED tp4.c)

set_target_properties( tp4  PROPERTIES
          VERSION 1.3.4
	  SOVERSION 1
	  CFLAGS -Wall
	)



FIND_PACKAGE(SWIG)
INCLUDE(UseSWIG)

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(CMAKE_SWIG_FLAGS "")

SET_SOURCE_FILES_PROPERTIES(tp4.i PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(tp4.i PROPERTIES SWIG_FLAGS "-includeall")
SWIG_ADD_MODULE(tp4 python tp4.i tp4.c)
SWIG_LINK_LIBRARIES(tp4 ${PYTHON_LIBRARIES})